@@ -2,7 +2,7 @@
 # HeaderSmall.dtl - provides global HTML header
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: HeaderSmall.dtl,v 1.11 2009-02-04 07:44:16 tr Exp $
+# $Id: HeaderSmall.dtl,v 1.12 2009-02-05 12:38:05 tr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -22,10 +22,6 @@ $Include{"Copyright"}
 # --
 <dtl set $Env{"Box0"} = "[ ">
 <dtl set $Env{"Box1"} = " ]">
-# --
-# create $Data{"UserLoginTop"} if user is loged in
-# --
-<dtl if ($Env{"UserLogin"} ne "") { $Data{"UserLoginTop"} = "($Env{"UserEmail"})"; }>
 # --
 <html>
 <head>
